--- a/Application/sparky-cicd/develop/values-batman.yaml
+++ b/Application/sparky-cicd/develop/values-batman.yaml
@@ -1,9 +1,9 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/thason/gitops-demo
+  name: quay.io/sparky-cicd/batman
   ## Tag that you want to build/deploy
-  tag: 95dc3a29ad17644952dc4a7be3add7f91cb661f8
+  tag: aff14f7e52b55e064be9421cfd15e166966a4ffe
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -66,9 +66,9 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/thason/gitops-demo
+      value: quay.io/sparky-cicd/batman
     - name: TAG
-      value: 95dc3a29ad17644952dc4a7be3add7f91cb661f8
+      value: aff14f7e52b55e064be9421cfd15e166966a4ffe
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
