--- a/Application/gothem/develop/values-joker.yaml
+++ b/Application/gothem/develop/values-joker.yaml
@@ -1,9 +1,9 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/sparky-cicd/joker
+  name: quay.io/gothem/joker
   ## Tag that you want to build/deploy
-  tag: ff4e8296f258ff7e71671aa0dd6687cab1741899
+  tag: 02f8d65b35aa3b8c15715c66945757d8e58c32f5
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -66,9 +66,9 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/sparky-cicd/joker
+      value: quay.io/gothem/joker
     - name: TAG
-      value: 'ff4e8296f258ff7e71671aa0dd6687cab1741899'
+      value: '02f8d65b35aa3b8c15715c66945757d8e58c32f5'
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
