--- a/Application/gothem/develop/values-robin.yaml
+++ b/Application/gothem/develop/values-robin.yaml
@@ -1,9 +1,9 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/sparky-cicd/robin
+  name: quay.io/gothem/robin
   ## Tag that you want to build/deploy
-  tag: f6a91fb1226c6161aba623c1996928f31756673c
+  tag: 9acdde2f1012744aab46bc2a19b01153b3741b33
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -66,9 +66,9 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/sparky-cicd/robin
+      value: quay.io/gothem/robin
     - name: TAG
-      value: f6a91fb1226c6161aba623c1996928f31756673c
+      value: 9acdde2f1012744aab46bc2a19b01153b3741b33
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
