--- a/ArgoCD/applicationset-demo-cd.yaml
+++ b/ArgoCD/applicationset-demo-cd.yaml
@@ -1,59 +1,8 @@
 ﻿apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  creationTimestamp: '2023-07-05T11:41:01Z'
-  generation: 11
-  managedFields:
-    - apiVersion: argoproj.io/v1alpha1
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:status':
-          .: {}
-          'f:conditions': {}
-      manager: argocd-applicationset-controller
-      operation: Update
-      subresource: status
-      time: '2023-09-06T19:19:32Z'
-    - apiVersion: argoproj.io/v1alpha1
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:spec':
-          .: {}
-          'f:generators': {}
-          'f:template':
-            .: {}
-            'f:metadata':
-              .: {}
-              'f:name': {}
-            'f:spec':
-              .: {}
-              'f:destination':
-                .: {}
-                'f:namespace': {}
-                'f:server': {}
-              'f:project': {}
-              'f:source':
-                .: {}
-                'f:helm':
-                  .: {}
-                  'f:valueFiles': {}
-                'f:path': {}
-                'f:repoURL': {}
-                'f:targetRevision': {}
-              'f:syncPolicy':
-                .: {}
-                'f:automated':
-                  .: {}
-                  'f:prune': {}
-                  'f:selfHeal': {}
-                'f:syncOptions': {}
-      manager: Mozilla
-      operation: Update
-      time: '2023-09-06T21:08:40Z'
   name: demo-cd
   namespace: openshift-gitops
-  resourceVersion: '4154741'
-  uid: 5ea8f373-1fd5-4c36-a084-c1651af3393b
 spec:
   generators:
     - git:
@@ -64,7 +13,7 @@ spec:
     - git:
         files:
           - path: Application/*/develop/values-*.yaml
-        repoURL: 'http://gitea-http.gitea.svc/sparky-cicd/sparky-cicd-cd.git'
+        repoURL: 'http://gitea-http.gitea.svc/gothem/gothem-cd.git'
         revision: main
   template:
     metadata:
