--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -62,7 +62,7 @@ spec:
 {{- if .Values.deploy.applicationProperties.enabled }}
         - name: application-properties
           configMap:
-            name: {{ include "app.name" . }}
+            name: '{{ include "app.name" . }}-{{ .Values.global.serviceName }}'
 {{- end }}
 {{- if .Values.deploy.volumes }}
         {{- tpl (toYaml .Values.deploy.volumes) . | nindent 8 }}
