--- a/Application/gothem/develop/values-robin.yaml
+++ b/Application/gothem/develop/values-robin.yaml
@@ -77,13 +77,22 @@ deploy:
   ## Application properties file for configuring the app
   applicationProperties:
     ## Determines if application properties should be created in a configmap and mounted to the application container
-    enabled: false
+    enabled: true
     ## Location to mount the properties file
-    mountPath: /deployments/config/
+    mountPath: /tmp/html/
     ## Application properties file contents
     fileName: application.properties
     properties: |-
-      ## Properties go here
+      <!DOCTYPE html>
+      <html>
+      <head>
+          <title>I'm Robin</title>
+      </head>
+      <body>
+          <h1>I'm Robin App</h1>
+          <img src="https://images7.alphacoders.com/129/1297490.jpg" alt="Robin">
+      </body>
+      </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
   volumeMounts:
   #  - name: my-config
