--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -13,6 +13,10 @@ spec:
     metadata:
       labels:
         {{- include "app.labels" . | nindent 8 }}
+      {{- if .Values.deploy.applicationProperties.enabled }}
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+      {{- end }}
     spec:
 {{- if .Values.deploy.initContainers }}
       initContainers:
