--- a/Application/gothem/develop/values-joker.yaml
+++ b/Application/gothem/develop/values-joker.yaml
@@ -90,7 +90,7 @@ deploy:
       </head>
       <body>
           <h1>I'm Joker App</h1>
-          <img src="./html/img/60578.jpg" alt="Joker">
+          <img src="./img/60578.jpg" alt="Joker">
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
