--- a/Application/gothem/develop/values-batman.yaml
+++ b/Application/gothem/develop/values-batman.yaml
@@ -90,7 +90,7 @@ deploy:
       </head>
       <body>
           <h1>I'm Batman App</h1>
-          <img src="https://gitea-demo-gitea.apps-crc.testing/gothem/batman/raw/branch/main/src/img/1329876.png" alt="Batman">
+          <a href="/image">View Image</a>
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
