--- a/Application/gothem/develop/values-batman.yaml
+++ b/Application/gothem/develop/values-batman.yaml
@@ -90,7 +90,7 @@ deploy:
       </head>
       <body>
           <h1>I'm Batman App</h1>
-          <img src="batman" alt="Batman">
+          <img src="image/1329876.png" alt="Joker">
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
