--- a/Application/gothem/develop/values-robin.yaml
+++ b/Application/gothem/develop/values-robin.yaml
@@ -90,7 +90,7 @@ deploy:
       </head>
       <body>
           <h1>I'm Robin App</h1>
-          <img src="image/1297490.png" alt="Robin">
+          <img src="image/1297490.jpg" alt="Robin">
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
