--- a/Application/gothem/develop/values-riddler.yaml
+++ b/Application/gothem/develop/values-riddler.yaml
@@ -1,9 +1,9 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/gothem/batman
+  name: quay.io/gothem/riddler
   ## Tag that you want to build/deploy
-  tag: e6fcc7ce62aecf154887e695c04c41a4bd50dbce
+  tag: 3b16291
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -66,9 +66,9 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/gothem/batman
+      value: quay.io/gothem/riddler
     - name: TAG
-      value: e6fcc7ce62aecf154887e695c04c41a4bd50dbce
+      value: 3b16291
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
