rename to gotham

--- a/Application/gotham/develop/branch/branch-feature.yaml
+++ b/Application/gotham/develop/branch/branch-feature.yaml
@@ -1,5 +1,5 @@
 branch: feature
-imageName: quay.io/gothem/batman
+imageName: quay.io/gotham/batman
 imageTag: 57c6399
 appName: batman
-userName: gothem
+userName: gotham
