--- a/ArgoCD/applicationset-demo-cd -branches.yaml
+++ b/ArgoCD/applicationset-demo-cd -branches.yaml
@@ -8,7 +8,7 @@ spec:
     - git:
         files:
           - path: Application/*/develop/branch/branch-*.yaml
-        repoURL: 'http://gitea-http.gitea.svc/gothem/gothem-cd.git'
+        repoURL: 'http://gitea-http.gitea.svc/gotham/gotham-cd.git'
         revision: main
   template:
     metadata:
