--- a/Application/gotham/develop/values-batman.yaml
+++ b/Application/gotham/develop/values-batman.yaml
@@ -1,9 +1,9 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/gothem/robin
+  name: quay.io/gotham/batman
   ## Tag that you want to build/deploy
-  tag: 62b2726
+  tag: e6fcc7ce62aecf154887e695c04c41a4bd50dbce
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -27,7 +27,7 @@ deploy:
       protocol: TCP
   ## For creating a Route, allowing your application to be accessed from outside the OCP cluster
   route:
-    enabled: true
+    enabled: false
     targetPort: http
     ## More information: https://docs.openshift.com/container-platform/4.6/networking/routes/secured-routes.html
     tls:
@@ -66,9 +66,9 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/gothem/robin
+      value: quay.io/gotham/batman
     - name: TAG
-      value: 62b2726
+      value: e6fcc7ce62aecf154887e695c04c41a4bd50dbce
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
@@ -86,11 +86,11 @@ deploy:
       <!DOCTYPE html>
       <html>
       <head>
-          <title>I'm Robin</title>
+          <title>I'm Batman</title>
       </head>
       <body>
-          <h1>I'm Robin App</h1>
-          <img src="image/1297490.jpg" alt="Robin">
+          <h1>I'm Batman App</h1>
+          <img src="image/1329876.png" alt="Batman">
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
@@ -117,7 +117,7 @@ deploy:
   #    image: registry.redhat.io/ubi8/ubi-minimal
 global:
   ## Override the release name
-  nameOverride: gothem
-  serviceName: robin
-  runTime: nginx
+  nameOverride: gotham
+  serviceName: batman
+  runTime: nodejs
   namespace: demo-develop
