--- a/Application/gotham/develop/values-riddler.yaml
+++ b/Application/gotham/develop/values-riddler.yaml
@@ -1,7 +1,7 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/gothem/riddler
+  name: quay.io/gotham/riddler
   ## Tag that you want to build/deploy
   tag: 3b16291
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
@@ -66,7 +66,7 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/gothem/riddler
+      value: quay.io/gotham/riddler
     - name: TAG
       value: 3b16291
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
@@ -117,7 +117,7 @@ deploy:
   #    image: registry.redhat.io/ubi8/ubi-minimal
 global:
   ## Override the release name
-  nameOverride: gothem
+  nameOverride: gotham
   serviceName: riddler
   runTime: nodejs
   namespace: demo-develop
