--- a/Application/gotham/develop/values-joker.yaml
+++ b/Application/gotham/develop/values-joker.yaml
@@ -97,6 +97,13 @@ deploy:
           <!-- Button to link to /test2 -->
           <a href="/test2" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none;">Test 2</a>
           <br>
+          <!-- Button to link to /test1 -->
+          <a href="https://batman-gotham-demo-develop.apps-crc.testing" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right: 10px;">Batman</a>
+
+          <!-- Button to link to /test2 -->
+          <a href="https://robin-gotham-demo-develop.apps-crc.testing" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none;">Robin</a>
+
+          <br>
           <img src="image/60578.jpg" alt="Joker">
       </body>
       </html>
