--- a/Application/gotham/develop/values-robin.yaml
+++ b/Application/gotham/develop/values-robin.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/robin
   ## Tag that you want to build/deploy
-  tag: 768aa76
+  tag: "4768867"
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -68,7 +68,7 @@ deploy:
     - name: IMAGE
       value: quay.io/gotham/robin
     - name: TAG
-      value: 768aa76
+      value: "4768867"
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
