--- a/Application/gotham/develop/values-gotham.yaml
+++ b/Application/gotham/develop/values-gotham.yaml
@@ -1,9 +1,9 @@
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/gotham/batman
+  name: quay.io/gotham/gotham
   ## Tag that you want to build/deploy
-  tag: "e274292"
+  tag: "90320bb"
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -66,9 +66,9 @@ deploy:
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
     - name: IMAGE
-      value: quay.io/gotham/batman
+      value: quay.io/gotham/gotham
     - name: TAG
-      value: "e274292"
+      value: "90320bb"
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
