--- a/Application/gotham/develop/values-gotham.yaml
+++ b/Application/gotham/develop/values-gotham.yaml
@@ -97,11 +97,9 @@ deploy:
           <a href="/test2" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right:">Test 2</a>
           <br>
           <hr>
-          <!-- Button to link to /test1 -->
-          <a href="https://batman-gotham-demo-develop.apps-crc.testing" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right: 10px;">Batman</a>
-          <!-- Button to link to /test2 -->
+          <a href="https://batman-gotham-demo-develop.apps-crc.testing" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right:">Batman</a>
           <a href="https://robin-gotham-demo-develop.apps-crc.testing" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right:">Robin</a>
-          <a href="https://joker-gotham-demo-develop.apps-crc.testing/" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right:">joker</a>
+          <a href="https://joker-gotham-demo-develop.apps-crc.testing" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; margin-right:">joker</a>
           <hr>
           <br>
           <img src="image/Gotham_Logo.jpg" alt="Gotham">
