--- a/Application/gotham/develop/values-batman.yaml
+++ b/Application/gotham/develop/values-batman.yaml
@@ -86,7 +86,7 @@ deploy:
       <!DOCTYPE html>
       <html>
       <head>
-          <title>I'm Batman</title>
+          <title>I'm Batman!!</title>
       </head>
       <body>
           <h1>I'm Batman App From gotham</h1>
