--- a/Application/gotham-demo/develop/values-gotham.yaml
+++ b/Application/gotham-demo/develop/values-gotham.yaml
@@ -129,7 +129,7 @@ deploy:
   #    image: registry.redhat.io/ubi8/ubi-minimal
 global:
   ## Override the release name
-  nameOverride: gotham
+  nameOverride: gotham-gh
   serviceName: gotham
   runTime: nodejs
   namespace: demo-develop
