--- a/Application/gotham-demo/develop/values-riddler.yaml
+++ b/Application/gotham-demo/develop/values-riddler.yaml
@@ -117,7 +117,7 @@ deploy:
   #    image: registry.redhat.io/ubi8/ubi-minimal
 global:
   ## Override the release name
-  nameOverride: gotham-gh
-  serviceName: riddler
+  nameOverride: gotham
+  serviceName: riddler-gh
   runTime: nodejs
   namespace: demo-develop
