--- a/Application/gotham-demo/develop/values-joker.yaml
+++ b/Application/gotham-demo/develop/values-joker.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/joker
   ## Tag that you want to build/deploy
-  tag: 8280f51
+  tag: quay.io/gotham/joker:20903ae
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
