Kargo applied multiple changes
Including:

  * updated Application/gotham-demo/develop/values-batman.yaml to use image quay.io/gotham/batman:3108617
  * updated Application/gotham-demo/develop/values-joker.yaml to use image quay.io/gotham/joker:20903ae
  * updated Application/gotham-demo/develop/values-robin.yaml to use image quay.io/gotham/robin:a678098
  * updated Application/gotham-demo/develop/values-riddler.yaml to use image quay.io/gotham/riddler:1e2cc8a
  * updated Application/gotham-demo/develop/values-gotham.yaml to use image quay.io/gotham/gotham:90320bb

--- a/Application/gotham-demo/develop/values-riddler.yaml
+++ b/Application/gotham-demo/develop/values-riddler.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/riddler
   ## Tag that you want to build/deploy
-  tag: quay.io/gotham/riddler:1e2cc8a
+  tag: 1e2cc8a
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
