--- a/Application/gotham-demo/develop/values-gotham.yaml
+++ b/Application/gotham-demo/develop/values-gotham.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/gotham
   ## Tag that you want to build/deploy
-  tag: quay.io/gotham/gotham:90320bb
+  tag: 90320bb
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
