--- a/Application/templates/staging-test.yaml
+++ b/Application/templates/staging-test.yaml
@@ -17,7 +17,7 @@ spec:
      - name: test-url
        image: registry.access.redhat.com/ubi9-minimal:latest
        workingDir: /workspace/output
-       command: ["/bin/bash", "-c"]
+      #  command: ["/bin/bash", "-c"]
       #  args: ['curl {{ include "app.name" . }}-{{ .Values.global.serviceName }}:{{ .Values.deploy.ports[0].port }}/health/liveliness || exit 1']
   backoffLimit: 1
 {{- end }}
