--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Create Branch File new
+name: Create Branch File
 
 on:
   push:
@@ -40,14 +40,19 @@ jobs:
 
         echo "branchName: $BRANCH_NAME" > $FILE_PATH
         echo "ImageTag: $IMAGE_TAG" >> $FILE_PATH
+
+        # Commit and push only the new file to the 'main' branch
+        if [[ "$BRANCH_NAME" == "main" ]]; then
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout main  # Switch to the main branch
+          git add $FILE_PATH  # Stage the new file
+          git commit -m "Create branch file for $BRANCH_NAME"
+          git push
+        fi
       shell: bash
 
-    - name: Commit and push changes
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git add .
-        git commit -m "Create branch file for $BRANCH_NAME"
-        git push
-      env:
-        BRANCH_NAME: ${{ steps.branch_name.outputs.branch }}
+    # Optionally, you can add a step to skip the 'main' branch if needed
+    - name: Skip 'main' branch
+      if: steps.branch_name.outputs.branch == 'main'
+      run: exit 0  # Exit with success status if the branch is 'main'
