--- a/kargo/stage-develop.yaml
+++ b/kargo/stage-develop.yaml
@@ -19,7 +19,7 @@ spec:
     gitRepoUpdates:
     - repoURL: https://github.com/gotham-demo/gotham-cd.git #https://gitea-http.gitea.svc/gotham/gotham-cd.git
       readBranch: main
-      writeBranch: Deploy/develope # Writing to stage-specific branch prevents the formation of a loop
+      writeBranch: Deploy/develop # Writing to stage-specific branch prevents the formation of a loop
       helm:
         images:
         - image: quay.io/gotham/batman
