--- a/ArgoCD/develop-app-set.yaml
+++ b/ArgoCD/develop-app-set.yaml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: gotham-demo-production-gh
+  name: gotham-demo-gh
   namespace: openshift-gitops
 spec:
   generators:
     - git:
         files:
-          - path: Application/*/production/values-*.yaml
+          - path: Application/*/develop/values-*.yaml
         repoURL: 'https://github.com/gotham-demo/gotham-cd.git'
         revision: main
   template:
     metadata:
       annotations:
-        kargo.akuity.io/authorized-stage: 'gotham-kargo:production'
+        kargo.akuity.io/authorized-stage: 'gotham-kargo:develop'
       name: '{{global.nameOverride}}-{{global.serviceName}}-{{path[2]}}'
     spec:
       destination:
@@ -26,7 +26,7 @@ spec:
             - '{{path[1]}}/{{path[2]}}/{{path.filename}}'
         path: '{{path[0]}}'
         repoURL: 'https://github.com/gotham-demo/{{global.nameOverride}}-cd.git'
-        targetRevision: main
+        targetRevision: Deploy/develop
       syncPolicy:
         automated:
           prune: true
