--- a/ArgoCD/testing-app-set.yaml
+++ b/ArgoCD/testing-app-set.yaml
@@ -7,13 +7,13 @@ spec:
   generators:
     - git:
         files:
-          - path: Application/*/develop/values-*.yaml
+          - path: Application/*/values-*.yaml
         repoURL: 'https://github.com/gotham-demo/gotham-cd.git'
         revision: main
   template:
     metadata:
       annotations:
-        kargo.akuity.io/authorized-stage: 'gotham-kargo:develop'
+        kargo.akuity.io/authorized-stage: 'gotham-kargo:code-testing'
       name: '{{global.nameOverride}}-{{global.serviceName}}-code-test'
     spec:
       destination:
