--- a/ArgoCD/develop-app-set.yaml
+++ b/ArgoCD/develop-app-set.yaml
@@ -7,7 +7,7 @@ spec:
   generators:
     - git:
         files:
-          - path: Application/*/values-*.yaml
+          - path: Application/gotham-demo/values-*.yaml
         repoURL: 'https://github.com/gotham-demo/gotham-cd.git'
         revision: main
   template:
