--- a/kargo/stage-prod-ready.yaml
+++ b/kargo/stage-prod-ready.yaml
@@ -1,7 +1,7 @@
 apiVersion: kargo.akuity.io/v1alpha1
 kind: Stage
 metadata:
-  name: code-testing
+  name: prod-ready
   namespace: gotham-kargo
   annotations:
     kargo.akuity.io/color: fuchsia
