--- a/kargo/stage-security-test.yaml
+++ b/kargo/stage-security-test.yaml
@@ -12,7 +12,7 @@ spec:
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/gotham-demo/gotham-cd.git #https://gitea-http.gitea.svc/gotham/gotham-cd.git
-      readBranch: Deploy/develope
+      readBranch: Deploy/develop
       writeBranch: Deploy/Security # Writing to stage-specific branch prevents the formation of a loop
       helm:
         images:
