--- a/kargo/stage-develop.yaml
+++ b/kargo/stage-develop.yaml
@@ -15,6 +15,9 @@ spec:
         updateStrategy: Latest
       - repoURL: quay.io/gotham/joker
         updateStrategy: Latest
+      git:
+      - repoURL: https://github.com/gotham-demo/gotham-cd.git
+        branch: main
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/gotham-demo/gotham-cd.git #https://gitea-http.gitea.svc/gotham/gotham-cd.git
@@ -23,15 +26,15 @@ spec:
       helm:
         images:
         - image: quay.io/gotham/batman
-          valuesFilePath: Application/gotham-demo/develop/values-batman.yaml
+          valuesFilePath: Application/gotham-demo/values-batman.yaml
           key: image.tag # Update this key to reference the new image version
           value: 'Tag'
         - image: quay.io/gotham/joker
-          valuesFilePath: Application/gotham-demo/develop/values-joker.yaml
+          valuesFilePath: Application/gotham-demo/values-joker.yaml
           key: image.tag # Update this key to reference the new image version
           value: 'Tag'
         - image: quay.io/gotham/robin
-          valuesFilePath: Application/gotham-demo/develop/values-robin.yaml
+          valuesFilePath: Application/gotham-demo/values-robin.yaml
           key: image.tag # Update this key to reference the new image version
           value: 'Tag'
     argoCDAppUpdates:
