--- a/ArgoCD/testing-app-set.yaml
+++ b/ArgoCD/testing-app-set.yaml
@@ -24,6 +24,9 @@ spec:
         helm:
           valueFiles:
             - '{{path[1]}}/{{path.filename}}'
+          parameters:
+            - name: global.namespace
+              value: code-test
         path: '{{path[0]}}'
         repoURL: 'https://github.com/gotham-demo/{{global.nameOverride}}-cd.git'
         targetRevision: Deploy/code-test
