update batman config

--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -92,6 +92,8 @@ deploy:
           <h1>I'm Batman App</h1>
           <br>
           <img src="image/1329876.png" alt="Batman">
+          <br>
+          <img src="image/kargo-logo.png" alt="Batman">
       </body>
       </html>
   ## Freeform volume mounts. More information: https://kubernetes.io/docs/concepts/storage/volumes/
