--- a/Application/gotham-demo/values-robin.yaml
+++ b/Application/gotham-demo/values-robin.yaml
@@ -89,7 +89,9 @@ deploy:
           <title>I'm Robin</title>
       </head>
       <body>
-          <h1>I'm Robin App</h1>
+          <h1>I'm Robin App!!</h1>
+          <br>
+          <img src="image/kargo-logo.png" alt="kargo">
           <br>
           <img src="image/1297490.jpg" alt="Robin">
       </body>
