--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/batman
   ## Tag that you want to build/deploy
-  tag: a317d06
+  tag: df00959
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -89,7 +89,10 @@ deploy:
           <title>I'm Batman!!</title>
       </head>
       <body>
-          <h1>I'm Batman App From gotham</h1>
+          <h1>I'm Batman App</h1>
+          <br>
+          <img src="image/kargo-logo.png" alt="kargo">
+          <br>
           <img src="image/1329876.png" alt="Batman">
       </body>
       </html>
