--- a/Application/gotham-demo/values-robin.yaml
+++ b/Application/gotham-demo/values-robin.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/robin
   ## Tag that you want to build/deploy
-  tag: 72c831a
+  tag: c631c79
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -89,7 +89,10 @@ deploy:
           <title>I'm Robin</title>
       </head>
       <body>
-          <h1>I'm Robin App</h1>
+          <h1>I'm Robin App!!</h1>
+          <br>
+          <img src="image/kargo-logo.png" alt="kargo">
+          <br>
           <img src="image/1297490.jpg" alt="Robin">
       </body>
       </html>
