--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -91,6 +91,8 @@ deploy:
       <body>
           <h1>I'm Batman App</h1>
           <br>
+          <img src="image/kargo-logo.png" alt="kargo">
+          <br>
           <img src="image/1329876.png" alt="Batman">
       </body>
       </html>
